# NHP-BrainExtraction

./: pyproject.toml
UNet_Model/: __init__.py  dataset.py  function.py  model.py  muSkullStrip.py  testSs_UNet.py  trainSs_UNet.py
